k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homebase
  labels:
    app.kubernetes.io/part-of: homebase
